--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "g-ui",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
+  "main": "./dist/gui.umd.min.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name gui ./src/packages/index.js --no-clean && vue-cli-service build  --all --no-clean",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
