--- a/package.json
+++ b/package.json
@@ -1,34 +1,54 @@
 {
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "name": "g-ui",
   "version": "1.0.0",
-  "private": false,
-  "main": "./dist/gui.umd.min.js",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "build:lib": "vue-cli-service build --target lib --name gui ./src/packages/index.js --no-clean && vue-cli-service build  --all --no-clean",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
-  },
+  "description": "",
+  "main": "index.js",
   "dependencies": {
-    "core-js": "^3.6.5",
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-mocha": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
+    "@babel/core": "^7.11.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.4.0",
+    "@storybook/addon-actions": "^5.3.19",
+    "@storybook/addon-links": "^5.3.19",
+    "@storybook/addons": "^5.3.19",
+    "@storybook/vue": "^5.3.19",
     "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
-    "chai": "^4.1.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^26.2.2",
+    "babel-loader": "^8.1.0",
+    "babel-preset-vue": "^2.0.2",
+    "cross-env": "^7.0.2",
+    "jest": "^26.2.2",
+    "lerna": "^3.22.1",
+    "plop": "^2.7.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.23.1",
+    "rollup-plugin-postcss": "^3.1.4",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-vue": "5.1.9",
+    "vue-jest": "^3.0.6",
+    "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11"
-  }
+  },
+  "scripts": {
+    "preinstall": "npx only-allow pnpm",
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "lerna": "lerna publish",
+    "clean": "lerna clean",
+    "plop": "plop",
+    "build:storybook": "build-storybook",
+    "build:prod": "cross-env NODE_ENV=production rollup -c",
+    "build:dev": "cross-env NODE_ENV=development rollup -c"
+    
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
