--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.19.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.4.0",
     "@storybook/addon-actions": "^5.3.19",
@@ -46,7 +47,6 @@
     "build:storybook": "build-storybook",
     "build:prod": "cross-env NODE_ENV=production rollup -c",
     "build:dev": "cross-env NODE_ENV=development rollup -c"
-    
   },
   "keywords": [],
   "author": "",
